--- a/Styles/divyataa.css
+++ b/Styles/divyataa.css
@@ -99,3 +99,26 @@ nav ul li:hover > ul {
 .programs-list li {
     margin: 5px 0;
 }
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .logo-header {
+        margin: 0 auto;
+    }
+
+    .school-name-header {
+        text-align: center;
+        width: 100%;
+        font-size: 1.2em;
+        margin-top: 10px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li a {
+        padding: 10px 15px;
+    }
+}
