--- a/Styles/divyataa.css
+++ b/Styles/divyataa.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Ghayathri', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
 }
 
 header {
