--- a/Styles/divyataa.css
+++ b/Styles/divyataa.css
@@ -130,6 +130,16 @@ nav ul ul li a {
 }
 
 @media only screen and (max-width: 768px) {
+    .logo-header {
+        width: 50px;
+        height: auto;
+        margin-right: 20px;
+    }
+
+    .school-name-header{
+        font-size: medium;
+        text-align: left;
+    }
     header {
         padding: 10px;
         text-align: left;
@@ -140,7 +150,7 @@ nav ul ul li a {
     .nav-menu {
         position: fixed;
         left: -100%;
-        top: 5rem;
+        top: 1rem;
         flex-direction: column;
         background-color: #6d0680;
         width: 100%;
