--- a/Styles/divyataa.css
+++ b/Styles/divyataa.css
@@ -33,7 +33,7 @@ header {
 }
 
 .school-name-header {
-    font-size: 1.5em;
+    font-size: 2rem;
     text-align: center;
     flex: 1;
     font-family: 'Gayathri-Bold', sans-serif;
