--- a/Styles/divyataa.css
+++ b/Styles/divyataa.css
@@ -5,16 +5,6 @@ body {
     background-color: #ffffff;
 }
 
-body.fade-out {
-    opacity: 0;
-    transition: opacity 0.5s ease;
-  }
-  
-  body {
-    opacity: 1;
-    transition: opacity 0.5s ease;
-  }  
-
 header {
     display: flex;
     align-items: center;
@@ -73,6 +63,7 @@ nav ul ul {
     left: 0;
     background-color: #333;
     padding: 0;
+    z-index: 2000;
 }
 
 nav ul ul li a {
