--- a/Styles/divyataa.css
+++ b/Styles/divyataa.css
@@ -266,6 +266,13 @@ nav ul ul li a {
   .social-link i {
     margin-right: 8px;
   }
+  .footer-legal {
+    text-align: left;
+    margin-top: 1.5rem;
+    font-size: 0.9rem;
+    color: #a7a7a7;
+  }
+  
 
 
   
